# matrix-architect

./: .env.example  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  README_UPGRADED.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx
matrix_architect/api/: app.py  routes_artifacts.py  routes_execute.py  routes_jobs.py  routes_plan.py
matrix_architect/cli/: main.py
matrix_architect/core/: deployer.py  executor.py  models.py  planner.py  policies.py  publisher.py  verifier.py  verifier_enhanced.py
matrix_architect/crew/: agents.py  crew_factory.py  tasks.py
matrix_architect/deployment/: __init__.py  base.py  deployer_manager.py  docker_compose_adapter.py  kubernetes_adapter.py  serverless_adapter.py
matrix_architect/integrations/: git_local.py  github.py  github_api.py  matrix_ai_client.py  matrix_guardian_client.py  matrix_hub_client.py
matrix_architect/observability/: __init__.py  logger.py  metrics.py  tracer.py
matrix_architect/queue/: __init__.py  celery_app.py  tasks.py
matrix_architect/sandbox/: __init__.py  docker_sandbox.py  sandbox_manager.py
matrix_architect/security/: __init__.py  auth.py  rbac.py  secrets.py
matrix_architect/storage/: artifact_store.py  job_store.py
matrix_architect/tools/: hub_tools.py  mcp_tools.py  patch_tools.py  repo_tools.py  sandbox_tools.py
