[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-architect"
version = "0.1.0"
description = "Architect/Executor service for the Matrix suite: plan, build, apply, verify and publish code changes."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"
authors = [{ name = "Matrix Suite" }]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.2.3",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "crewai>=0.51.0",
  "pyjwt[crypto]>=2.8.0",
  "litellm>=1.80.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.2",
  "build>=1.2.1",
]

[project.scripts]
matrix-architect = "matrix_architect.cli.main:app"

[tool.setuptools]
package-dir = {"" = ""}

[tool.setuptools.packages.find]
where = ["."]
include = ["matrix_architect*"]

[tool.ruff]
line-length = 100
